--- a/data_anonymizer/templates/columnselector.html
+++ b/data_anonymizer/templates/columnselector.html
@@ -9,19 +9,25 @@
             <form action="{{ url_for('action') }}" method="POST">
                 {% for table in tables %}
                 <h3>{{ table }}</h3>
-                <!-- iterator -->
+                <label for="iterator{{table}}">Iterator</label>
+                <select name="*iterator*{{table}}" id="iterator{{table}}">
+                    {% for column in tables[table] %}
+                    <option value="{{ column }}">{{ column }}</option>
+                    {% endfor %}
+                </select>
                 <table>
                     {% for column in tables[table] %}
                     <tr>
                         <td>{{ column }}</td>
                         <td>
-                            <select name="{{ table }}!?!{{ column }}">
+                            <select name="{{ table }}!?!{{ column }}!?!type">
                                 <option value="None">No Change</option>
                                 <option value="first_name">first_name</option>
                                 <option value="middle_name">middle_name</option>
                                 <option value="last_name">last_name</option>
                                 <option value="phone_number">phone_number</option>
                             </select>
+                            <input type="text" name="{{ table }}!?!{{ column }}!?!data">
                         </td>
                     </tr>
                     {% endfor %}
