added new data types & fixes

--- a/data_anonymizer/templates/columnselector.html
+++ b/data_anonymizer/templates/columnselector.html
@@ -26,6 +26,11 @@
                                 <option value="middle_name">middle_name</option>
                                 <option value="last_name">last_name</option>
                                 <option value="phone_number">phone_number</option>
+                                <option value="marvel_character">marvel_character</option>
+                                <option value="marvel_locations">marvel_locations</option>
+                                <option value="int">int</option>
+                                <option value="string">string</option>
+                                <option value="bool">bool</option>
                             </select>
                             <input type="text" name="{{ table }}!?!{{ column }}!?!data">
                         </td>
