added missing type to dropdown

--- a/data_anonymizer/templates/columnselector.html
+++ b/data_anonymizer/templates/columnselector.html
@@ -28,6 +28,7 @@
                                 <option value="phone_number">phone_number</option>
                                 <option value="marvel_character">marvel_character</option>
                                 <option value="marvel_locations">marvel_locations</option>
+                                <option value="date">date</option>
                                 <option value="int">int</option>
                                 <option value="string">string</option>
                                 <option value="bool">bool</option>
