--- a/data_anonymizer/templates/columnselector.html
+++ b/data_anonymizer/templates/columnselector.html
@@ -38,7 +38,7 @@
                             <label for="{{ column }}">{{ column }}</label>
                             <select name="{{ table }}!?!{{ column }}!?!type"
                                     onChange="checkFormValue(this.value, '{{ table }}!?!{{ column }}');"
-                                    class="form-control">
+                                    class="custom-select form-control">
                                 <option value="None">No Change</option>
                                 <option value="first_name">first_name</option>
                                 <option value="middle_name">middle_name</option>
