--- a/data_anonymizer/templates/storage.html
+++ b/data_anonymizer/templates/storage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/style.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/bootstrap.css') }}">
     </head>
     <body>
         <h1>Testing</h1>
