--- a/data_anonymizer/templates/tableselector.html
+++ b/data_anonymizer/templates/tableselector.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/style.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/bootstrap.css') }}">
 
     {# Scripts #}
     <script type="text/javascript" src="../static/js/jquery.js"></script>
