--- a/data_anonymizer/templates/columnselector.html
+++ b/data_anonymizer/templates/columnselector.html
@@ -7,9 +7,9 @@
     <script type="text/javascript" src="../static/js/jquery.js"></script>
     <script type="text/javascript" src="../static/js/main.js"></script>
 </head>
+
 <body>
 <div class="container">
-
     <div class="vh-1">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="../">Table Selector</a></li>
@@ -32,13 +32,15 @@
                         </select>
                     </div>
                 </div>
+
                 <div class="form-row">
                     {% for column in tables[table] %}
                         <div class="form-group col-md-3">
                             <label for="{{ column }}">{{ column }}</label>
                             <select name="{{ table }}!?!{{ column }}!?!type"
-                                    onChange="checkFormValue(this.value, '{{ table }}!?!{{ column }}');"
-                                    class="custom-select form-control">
+                                    onChange="checkFormValue(this.value, '{{ table }}-{{ column }}');"
+                                    class="custom-select form-control"
+                                    id="{{ column }}">
                                 <option value="None">No Change</option>
                                 <option value="first_name">first_name</option>
                                 <option value="middle_name">middle_name</option>
@@ -51,11 +53,36 @@
                                 <option value="string">string</option>
                                 <option value="bool">bool</option>
                             </select>
+
+                            {% for selected_table in selected %}
+                                {% for selected_column in selected[selected_table] %}
+                                    {% if selected_column == column %}
+                                        <script>
+                                            $(function() {
+                                                let type = "{{ selected[selected_table][selected_column]['type'] }}";
+                                                $("#{{ column }}").val(type);
+                                            });
+                                        </script>
+
+                                        {% if selected[selected_table][selected_column]['data'] is defined %}
+                                            <script>
+                                                $(function() {
+                                                    let value = "{{ selected[selected_table][selected_column]['data'] }}";
+                                                    $("#{{ table }}-{{ column }}").val(value);
+                                                    $("#{{ table }}-{{ column }}").prop('disabled', false);
+                                                });
+                                            </script>
+                                        {% endif %}
+
+                                    {% endif %}
+                                {%  endfor %}
+                            {% endfor %}
+
                             <input
                                     class="form-control disabled"
                                     type="text"
                                     name="{{ table }}!?!{{ column }}!?!data"
-                                    id="{{ table }}!?!{{ column }}"
+                                    id="{{ table }}-{{ column }}"
                                     disabled>
                         </div>
                     {% endfor %}
